# perception_squad

./: README.md
src/perception_task/: CMakeLists.txt  package.xml
src/perception_task/launch/: bag_launch.py
src/perception_task/output/: depthcam_ground_points.ply  depthcam_non_ground_points.ply  lidar_ground_points.ply  lidar_non_ground_points.ply  output.txt
src/perception_task/src/: extrinsic_calibration.cpp
